fix overflow article

--- a/src/pages/SingleArticlepage/SingleArticlepage.module.scss
+++ b/src/pages/SingleArticlepage/SingleArticlepage.module.scss
@@ -12,7 +12,6 @@
 .content {
     padding-top: 20px;
     border-top: 2px solid var(--primary-violet);
-    overflow: auto;
 }
 
 .text {
